feat: update system version to 1.0.2; add Japanese translations and new messages; enhance Taskbar with Japanese title; add new music track and GIFs

--- a/src/components/ui/Window/Window.module.scss
+++ b/src/components/ui/Window/Window.module.scss
@@ -122,7 +122,7 @@
     }
 
     &::before {
-      content: "Moving...";
+      content: "ドラッギング";
       position: absolute;
       top: 50%;
       left: 50%;
