--- a/src/components/desktop/Taskbar/Taskbar.module.scss
+++ b/src/components/desktop/Taskbar/Taskbar.module.scss
@@ -135,6 +135,15 @@
   text-shadow: 0 0 5px rgba($vapor-neon-pink, 0.5);
 }
 
+.japaneseTitle {
+  font-family: $font-vcr;
+  font-size: 12px;
+  color: rgba($vapor-cyan, 0.8);
+  margin: -5px 0 5px 0;
+  text-shadow: 0 0 5px rgba($vapor-cyan, 0.5);
+  letter-spacing: 1px;
+}
+
 .messageBox {
   padding: 10px;
   background-color: rgba($vapor-dark-purple, 0.5);
